# substance3d_ripper

./: .gitignore  README.md  config.py  pyproject.toml  ripper.py
.github/workflows/: ci.yml
substance3d_ripper/: __init__.py  constants.py  ripper.py  types.py
